--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "js-file-download": "^0.4.4",
+    "node-rsa": "^1.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-password-mask": "^3.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
