--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-password-mask": "^3.3.1",
     "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
     "request": "^2.88.0"
   },
   "scripts": {
